[package]
name = "server"
version = "0.1.0"
authors = ["xaresti001 <xaresti001@ikasle.ehu.eus>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete_lib = "0.1.0"
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6.5"
ndarray = "0.15.2"
chrono = "0.4"
